# ml_ops_project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  data.dvc  environment.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.dvc/: config
.github/workflows/: tests.yaml
configs/: config.yaml
data/example/val/: val.csv
dockerfiles/: README  api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
reports/: README.md  report.py
src/ml_ops_project/: api.py  data.py  main.py  model.py  predict.py  prepare_data.py  train.py
tests/: __init__.py  test_api.py  test_data.py  test_model.py
